# CLIFp

./: .gitignore  CLIFp.pro  CMakeLists.txt  README.md  resources.qrc  resources.rc
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-clifp-linux.yml  build-clifp-windows.yml  build-project.yml  check-release-pr.yml  generate-release.yml  label-pr.yml  master-pull-request-checks.yml  master-pull-request-merge-reaction.yml  pull-request-labeler.yml  push-reaction.yml  tag-release-commit-and-sync-dev.yml
app/: CMakeLists.txt
app/console/: CMakeLists.txt
app/console/src/: main.cpp
app/console/src/frontend/: console.cpp  console.h  input.cpp  input.h  progressprinter.cpp  progressprinter.h
app/gui/: CMakeLists.txt
app/gui/res/: resources.qrc
app/gui/src/: main.cpp
app/gui/src/frontend/: gui.cpp  gui.h
app/src/: controller.cpp  controller.h  main.cpp  utility.cpp  utility.h
app/src/command/: c-download.cpp  c-download.h  c-link.cpp  c-link.h  c-link_linux.cpp  c-link_win.cpp  c-play.cpp  c-play.h  c-prepare.cpp  c-prepare.h  c-run.cpp  c-run.h  c-share.cpp  c-share.h  c-show.cpp  c-show.h  c-update.cpp  c-update.h  command.cpp  command.h  title-command.cpp  title-command.h
app/src/frontend/: directive.h  message.h  statusrelay.cpp  statusrelay.h
app/src/kernel/: buildinfo.h  core.cpp  core.h  directive.h  director.cpp  director.h  directorate.cpp  directorate.h  driver.cpp  driver.h  errorcode.h  errorstatus.h
app/src/task/: t-awaitdocker.cpp  t-awaitdocker.h  t-bideprocess.cpp  t-bideprocess.h  t-download.cpp  t-download.h  t-exec.cpp  t-exec.h  t-exec_linux.cpp  t-exec_win.cpp  t-extra.cpp  t-extra.h  t-extract.cpp  t-extract.h  t-generic.cpp  t-generic.h  t-message.cpp  t-message.h  t-mount.cpp  t-mount.h  t-sleep.cpp  t-sleep.h  task.cpp  task.h
app/src/tools/: blockingprocessmanager.cpp  blockingprocessmanager.h  deferredprocessmanager.cpp  deferredprocessmanager.h  mounter.cpp  mounter.h  mounter_game_server.cpp  mounter_game_server.h  mounter_proxy.cpp  mounter_proxy.h  mounter_qmp.cpp  mounter_qmp.h  mounter_router.cpp  mounter_router.h  processbider.cpp  processbider.h  processbider_p.h  processbider_p_linux.cpp  processbider_p_win.cpp
cmake/file_templates/: CLIFpConfig.cmake.in
cmake/module/: ProjectVars.cmake  VerboseVersioning.cmake  WinExecutableDetails.cmake  __project_vars.h.in  __resources.rc.in
cmake/module/CLIFp/: FetchMagicEnum.cmake  FetchOBCMake.cmake  FetchQI-QMP.cmake  FetchQuaZIP.cmake  FetchQuaZip.cmake  FetchQx.cmake  Fetchlibfp.cmake  ProjectVars.cmake  VerboseVersioning.cmake  WinExecutableDetails.cmake  __resources.rc.in
include/: qx-io.h  qx-net.h  qx-widgets.h  qx-windows.h  qx-xml.h  qx.h
lib/: CMakeLists.txt  QxW_static32_0-0-7-8_Qt_5-15-2.lib  QxW_static32_0-0-7-9_Qt_5-15-2.lib  QxW_static64_0-0-7-8_Qt_5-15-2.lib  QxW_static64_0-0-7-9_Qt_5-15-2.lib  Qx_static32_0-0-2-14_Qt_5-15-0.lib  Qx_static32_0-0-2-14_Qt_5-15-0d.lib  Qx_static32_0-0-2-16_Qt_5-15-0.lib  Qx_static32_0-0-2-16_Qt_5-15-0d.lib  Qx_static32_0-0-2-9_Qt_5-15-0.lib  Qx_static32_0-0-2-9_Qt_5-15-0d.lib  Qx_static32_0-0-3-0_Qt_5-15-2.lib  Qx_static32_0-0-3-0_Qt_5-15-2d.lib  Qx_static32_0-0-4-2_Qt_5-15-2.lib  Qx_static32_0-0-4-2_Qt_5-15-2d.lib  Qx_static32_0-0-4-5_Qt_5-15-2.lib  Qx_static32_0-0-4-5_Qt_5-15-2d.lib  Qx_static32_0-0-4-8_Qt_5-15-2.lib  Qx_static32_0-0-4-8_Qt_5-15-2d.lib  Qx_static32_0-0-4-9_Qt_5-15-2.lib  Qx_static32_0-0-4-9_Qt_5-15-2d.lib  Qx_static32_0-0-5-0_Qt_5-15-2.lib  Qx_static32_0-0-5-0_Qt_5-15-2d.lib  Qx_static32_0-0-5-1_Qt_5-15-2.lib  Qx_static32_0-0-5-1_Qt_5-15-2d.lib  Qx_static64_0-0-1-9_Qt_5-15-0.lib  Qx_static64_0-0-1-9_Qt_5-15-0d.lib  Qx_static64_0-0-2-14_Qt_5-15-0.lib  Qx_static64_0-0-2-14_Qt_5-15-0d.lib  Qx_static64_0-0-2-16_Qt_5-15-0.lib  Qx_static64_0-0-2-16_Qt_5-15-0d.lib  Qx_static64_0-0-2-5_Qt_5-15-0.lib  Qx_static64_0-0-2-5_Qt_5-15-0d.lib  Qx_static64_0-0-2-6_Qt_5-15-0.lib  Qx_static64_0-0-2-6_Qt_5-15-0d.lib  Qx_static64_0-0-2-7_Qt_5-15-0.lib  Qx_static64_0-0-2-7_Qt_5-15-0d.lib  Qx_static64_0-0-2-8_Qt_5-15-0.lib  Qx_static64_0-0-2-8_Qt_5-15-0d.lib  Qx_static64_0-0-2-9_Qt_5-15-0.lib  (+8 more)
lib/backend/: CMakeLists.txt
lib/backend/include/kernel/: directive.h  driver.h  errorcode.h
lib/backend/src/: utility.h
lib/frontend_framework/: CMakeLists.txt
lib/frontend_framework/cmake/: FrontendFramework.cmake
lib/frontend_framework/res/: frontend_framework.qrc
redirector/: redirect.html
res/: resources.qrc
src/: CMakeLists.txt  c-link.cpp  c-link.h  c-linkh  c-play.cpp  c-play.h  c-prepare.cpp  c-prepare.h  c-run.cpp  c-run.h  c-shortcut.cpp  c-shortcut.h  c-show.cpp  c-show.h  command.cpp  command.h  controller.cpp  controller.h  core.cpp  core.h  driver.cpp  driver.h  flashpoint-db.cpp  flashpoint-db.h  flashpoint-install.cpp  flashpoint-install.h  flashpoint-json.cpp  flashpoint-json.h  flashpoint-macro.cpp  flashpoint-macro.h  flashpointinstall.cpp  flashpointinstall.h  logger.cpp  logger.h  main.cpp  mounter.cpp  mounter.h  processwaiter.cpp  processwaiter.h  statusrelay.cpp  (+5 more)
src/command/: c-link.cpp  c-link.h  c-link_linux.cpp  c-link_win.cpp  c-play.cpp  c-play.h  c-prepare.cpp  c-prepare.h  c-run.cpp  c-run.h  c-show.cpp  c-show.h  command.cpp  command.h
src/flashpoint/: fp-db.cpp  fp-db.h  fp-install.cpp  fp-install.h  fp-items.cpp  fp-items.h  fp-json.cpp  fp-json.h  fp-macro.cpp  fp-macro.h
src/frontend/: statusrelay.cpp  statusrelay.h
src/kernel/: core.cpp  core.h  driver.cpp  driver.h  errorcode.h
src/task/: t-awaitdocker.cpp  t-awaitdocker.h  t-bideprocess.cpp  t-bideprocess.h  t-download.cpp  t-download.h  t-exec.cpp  t-exec.h  t-exec_linux.cpp  t-exec_win.cpp  t-extra.cpp  t-extra.h  t-extract.cpp  t-extract.h  t-message.cpp  t-message.h  t-mount.cpp  t-mount.h  t-sleep.cpp  t-sleep.h  t-wait.cpp  t-wait.h  task.cpp  task.h
src/tools/: blockingprocessmanager.cpp  blockingprocessmanager.h  deferredprocessmanager.cpp  deferredprocessmanager.h  mounter.cpp  mounter.h  processbider.cpp  processbider.h  processwaiter.cpp  processwaiter.h
(+69 files in other folders)
